fixed spacing

--- a/app/components/AngledRectangle/AngledRectangle.module.css
+++ b/app/components/AngledRectangle/AngledRectangle.module.css
@@ -16,6 +16,7 @@
 	/* margin-bottom: 5rem; */
 	text-transform: uppercase;
 	line-height: 1;
+	padding-bottom: 5rem;
 }
 
 .angled_rectangle.right {
@@ -60,6 +61,6 @@
 	flex-direction: column;
 	align-items: center;
 	/* justify-content: center; */
-	gap: 5rem;
+	/* gap: 5rem; */
 	width: 100%;
 }
